test_files/success/max_data.s
    .data
.space 0x10040000 - 0x10010000

    .text
main:
    jr      $ra
