test_files/compile_error/too_much_data.s
    .data
.space 0x10040000 - 0x10010000
.space 1

    .text
main:
    jr      $ra
